--- a/cat.html
+++ b/cat.html
@@ -33,22 +33,18 @@
             </li>
             <li class="breadcrumb-item"><a href="ug.html">ئۇيغۇرچە</a></li>
             <li class="breadcrumb-item"><a href="tai.html">Tai</a></li>
-            <li class="breadcrumb-item"><a href="ko.html">조선어</a></li>
             <li class="breadcrumb-item">
               <i class="moji moji-es"></i><a href="es.html">Castellano</a>
             </li>
             <li class="breadcrumb-item active">Català</li>
             <li class="breadcrumb-item">
-              <a href="ar.html"><i class="moji moji-ar"></i>العربية</a>
+              <a href="ja.html">日本語</a>
             </li>
             <li class="breadcrumb-item">
               <a href="eo.html"><i class="moji moji-eo"></i>Esperanto</a>
             </li>
             <li class="breadcrumb-item">
               <a href="lat.html"><i class="moji moji-lat"></i>Lingua Latina</a>
-            </li>
-            <li class="breadcrumb-item">
-              <a href="ja.html">日本語</a>
             </li>
           </ol>
         </nav>
@@ -124,7 +120,7 @@
                 Orgullosa de ser trans. Contribuïdora de
                 <a href="https://mtf.wiki/">MtF-Wiki</a>.
               </p>
-              <p>M'agrada faldilla taulada(JKs). 🍱 "Gourmet".</p>
+              <p>M'agraden cobrellits. M'agrada faldilla. M'agraden menjars.</p>
               <p>
                 👩🏻‍🎓 Estic estudiant Castellà cas com a especialitat a la
                 universitat.
@@ -132,10 +128,7 @@
               <p>📷 Fotògrafa. Videojocs de ritme: maimai i Sound Voltex.</p>
               <p>✈️ M'encanta viatjar. He viatjat a diversos continents.</p>
               <p>👀 M'interessen lingüística, NLP, i altres coses.</p>
-              <p>
-                ⌨️ <i class="moji moji-python"></i>Python
-                <i class="moji moji-php"></i>PHP
-              </p>
+              <p>⌨️ Python, Go, PHP. Espero entender C++</p>
               <p>Usuària de <i class="moji moji-archlinux"></i>ArchLinux.</p>
             </div>
           </div>
