--- a/eo.html
+++ b/eo.html
@@ -33,22 +33,18 @@
             </li>
             <li class="breadcrumb-item"><a href="ug.html">ئۇيغۇرچە</a></li>
             <li class="breadcrumb-item"><a href="tai.html">Tai</a></li>
-            <li class="breadcrumb-item"><a href="ko.html">조선어</a></li>
             <li class="breadcrumb-item">
               <a href="es.html"><i class="moji moji-es"></i>Español</a>
             </li>
             <li class="breadcrumb-item"><a href="cat.html">Català</a></li>
             <li class="breadcrumb-item">
-              <a href="ar.html"><i class="moji moji-ar"></i>العربية</a>
+              <a href="ja.html">日本語</a>
             </li>
             <li class="breadcrumb-item active">
               <i class="moji moji-eo"></i>Esperanto
             </li>
             <li class="breadcrumb-item">
               <a href="lat.html"><i class="moji moji-lat"></i>Lingua Latina</a>
-            </li>
-            <li class="breadcrumb-item">
-              <a href="ja.html">日本語</a>
             </li>
           </ol>
         </nav>
@@ -137,12 +133,9 @@
               <p>📷 Fotisto. Ludanto de ritmaj ludoj.</p>
               <p>✈️ Mi amas vojaĝi! Mi vojaĝis al multaj landoj.</p>
               <p>👀 Interesas pri lingvistiko, NLP kaj aliaj aferoj.</p>
+              <p>⌨️ Python, Go. Mi esperas kompreni C++.</p>
               <p>
-                ⌨️ <i class="moji moji-python"></i>Python
-                <del
-                  ><i class="moji moji-php"></i>PHP estas la plej bona lingvo en
-                  la mondo!</del
-                >
+                <del>PHP estas la plej bona lingvo en la mondo!</del>
               </p>
               <p><i class="moji moji-archlinux"></i>Uzanto de ArchLinux.</p>
               <audio src="assets/La_Internacio.ogg" autoplay controls></audio>
