--- a/index.html
+++ b/index.html
@@ -33,22 +33,18 @@
             </li>
             <li class="breadcrumb-item"><a href="ug.html">ئۇيغۇرچە</a></li>
             <li class="breadcrumb-item"><a href="tai.html">Tai</a></li>
-            <li class="breadcrumb-item"><a href="ko.html">조선어</a></li>
             <li class="breadcrumb-item">
               <a href="es.html"><i class="moji moji-es"></i>Español</a>
             </li>
             <li class="breadcrumb-item"><a href="cat.html">Català</a></li>
             <li class="breadcrumb-item">
-              <a href="ar.html"><i class="moji moji-ar"></i>العربية</a>
+              <a href="ja.html">日本語</a>
             </li>
             <li class="breadcrumb-item">
               <a href="eo.html"><i class="moji moji-eo"></i>Esperanto</a>
             </li>
             <li class="breadcrumb-item">
               <a href="lat.html"><i class="moji moji-lat"></i>Lingua Latina</a>
-            </li>
-            <li class="breadcrumb-item">
-              <a href="ja.html">日本語</a>
             </li>
           </ol>
         </nav>
@@ -67,6 +63,9 @@
                 >Suzhou Wu Dialect Dict</a
               >
               <a href="https://mtf.wiki" class="list-group-item">MtF Wiki</a>
+              <a href="https://mirrors.nya.fish" class="list-group-item"
+                >mirrors.nya.fish (IPv6 only)</a
+              >
               <a href="amigos.html" class="list-group-item">Friends</a>
             </ul>
           </div>
@@ -149,22 +148,28 @@
                 <a href="https://nguphing.saeziae.net"
                   >Wu language input method</a
                 >
-                is now in active development.
+                is now in active development. There is also a
+                <a href="https://nguphing.saeziae.net"
+                  >Suzhou Dialect Dictionary</a
+                >
               </p>
-              <p>Skirt lover. 🍱 "Gourmet".</p>
-              <p>👩🏻‍🎓 Majoring in Spanish language at university.</p>
+              <p>Love bed. Love skirts. Love gourmet food.</p>
               <p>
-                📷 Photographer. Rhythm game player, now stuck on maimai and
-                Sound Voltex.
+                👩🏻‍🎓 Majoring in Spanish language at university, as well as
+                computer science.
+              </p>
+              <p>
+                📷 Photographer. Rhythm game player, on maimai and Sound Voltex.
               </p>
               <p>✈️ I love travelling! I've travelled to many countries.</p>
               <p>👀 Interested in linguistics, NLP and other things.</p>
+              <p>⌨️ Python, Go, hope to understand C++</p>
               <p>
-                ⌨️ <i class="moji moji-python"></i>Python<br />
-                <del
-                  ><i class="moji moji-php"></i>PHP is the best language in the
-                  world!</del
-                >
+                <del>PHP is the best language in the world!</del>
+              </p>
+              <p>
+                Using HiSilicon Kunpeng, Phytium, Zhaoxin CPUs. Wanting RISC-V,
+                wanting an ARM laptop.
               </p>
               <p><i class="moji moji-archlinux"></i>ArchLinux user.</p>
             </div>
