--- a/ja.html
+++ b/ja.html
@@ -37,21 +37,17 @@
             </li>
             <li class="breadcrumb-item"><a href="ug.html">ئۇيغۇرچە</a></li>
             <li class="breadcrumb-item"><a href="tai.html">Tai</a></li>
-            <li class="breadcrumb-item"><a href="ko.html">조선어</a></li>
             <li class="breadcrumb-item">
               <a href="es.html"><i class="moji moji-es"></i>Español</a>
             </li>
             <li class="breadcrumb-item"><a href="cat.html">Català</a></li>
-            <li class="breadcrumb-item">
-              <a href="ar.html"><i class="moji moji-ar"></i>العربية</a>
-            </li>
+            <li class="breadcrumb-item active">日本語</li>
             <li class="breadcrumb-item">
               <a href="eo.html"><i class="moji moji-eo"></i>Esperanto</a>
             </li>
             <li class="breadcrumb-item">
               <a href="lat.html"><i class="moji moji-lat"></i>Lingua Latina</a>
             </li>
-            <li class="breadcrumb-item active">日本語</li>
           </ol>
         </nav>
       </div>
@@ -127,17 +123,17 @@
                 <a href="https://mtf.wiki/">MtF-Wiki</a>の成員
               </p>
               <p>
-                スカートが大好き 🍱 "グルメ"
+                布団が大好き スカートが好き グルメが好き
                 <a href="https://en.wikipedia.org/wiki/Wu_Chinese">呉語</a
                 >の母語話者
               </p>
-              <p>👩🏻‍🎓 大学でスペイン語を専攻しとります。</p>
-              <p>📷 写真。音ゲーマー：maimai と Sound Voltex.</p>
+              <p>👩🏻‍🎓 大学でスペイン語と情報工学を専攻しとります。</p>
+              <p>📷 写真が好き　音ゲーマーが好き：maimai と Sound Voltex</p>
               <p>✈️ 旅行がめっちゃ好きやねん！ようけの国に旅行してん。</p>
               <p>👀 言語学、NLP、その他に興味があんねん。</p>
+              <p>⌨️ Python, Go. C++を理解したいと思っとります。</p>
               <p>
-                ⌨️ <i class="moji moji-python"></i>Python<br />
-                <del><i class="moji moji-php"></i>ＰＨＰはセカイイチ！</del>
+                <del>ＰＨＰはセカイイチ！</del>
               </p>
               <p>
                 <i class="moji moji-archlinux"></i
