--- a/rick/index.html
+++ b/rick/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <video
-      src="https://gitlab.com/saeziae/never-gonna-give-you-up/-/raw/main/video.webm"
+      src="video.webm"
       autoplay="autoplay"
       muted="muted"
       loop="loop"
