--- a/tai.html
+++ b/tai.html
@@ -41,22 +41,18 @@
             </li>
             <li class="breadcrumb-item"><a href="ug.html">ئۇيغۇرچە</a></li>
             <li class="breadcrumb-item active">ᨲ᩠ᩅᩫᨴᩱᩭ</li>
-            <li class="breadcrumb-item"><a href="ko.html">조선어</a></li>
             <li class="breadcrumb-item">
               <a href="es.html"><i class="moji moji-es"></i>Español</a>
             </li>
             <li class="breadcrumb-item"><a href="cat.html">Català</a></li>
             <li class="breadcrumb-item">
-              <a href="ar.html"><i class="moji moji-ar"></i>العربية</a>
+              <a href="ja.html">日本語</a>
             </li>
             <li class="breadcrumb-item">
               <a href="eo.html"><i class="moji moji-eo"></i>Esperanto</a>
             </li>
             <li class="breadcrumb-item">
               <a href="lat.html"><i class="moji moji-lat"></i>Lingua Latina</a>
-            </li>
-            <li class="breadcrumb-item">
-              <a href="ja.html">日本語</a>
             </li>
           </ol>
         </nav>
@@ -133,20 +129,14 @@
                 <a href="https://mtf.wiki/">MtF-Wiki</a> ᨹᩪᩢᨣᩫ᩠ᨶ
               </p>
               <p>
-                ᨾᩢ᩠ᨠᩈ᩠ᨶᩥᩢJK 🍱 "ᩁᩢ᩠ᨠᨠᩥ᩠ᨶ" ᩋᩪ᩶<a
-                  href="https://en.wikipedia.org/wiki/Wu_Chinese"
-                  >ᨽᩣᩈᩣᨦᩪ</a
-                >
+                ᩋᩪ᩶<a href="https://en.wikipedia.org/wiki/Wu_Chinese">ᨽᩣᩈᩣᨦᩪ</a>
               </p>
               <p>👩🏻‍🎓 ᩁ᩠ᨿᩁᨻᩣᩈᩣᩈᨸ᩠ᨶᩮᨴᩦ᩵ᨾᩉᩣᩅᩥᨴ᩠ᨿᩣᩃᩱ</p>
               <p>📷 ᨳ᩵ᩣ᩠ᨿᩁ᩠ᨷᩪ ᨠᩣ᩠ᩁᩉᩖᩮ᩵ᩁᨯᩩᩁᨲᩕᩦ: maimai ᩓ Sound Voltex.</p>
               <p>✈️ ᩁᩢ᩠ᨠᨴᩬ᩵ᨦᩋᩯ᩠᩵ᩅ ᨸᩱᩋᩯ᩠᩵ᩅᩉ᩠ᩃᩣ᩠ᨿᨴᩦ᩵ᩓ᩠ᩅ</p>
               <p>👀 ᨾᩢ᩠ᨠᨽᩣᩈᩣᩈᨲ᩠ᨳ</p>
-              <p>
-                ⌨️ <i class="moji moji-python"></i>Python
-                <i class="moji moji-php"></i>PHP
-                <i class="moji moji-archlinux"></i>ArchLinux user.
-              </p>
+              <p>⌨️ Python, Go, PHP.</p>
+              <p><i class="moji moji-archlinux"></i>ArchLinux</p>
             </div>
           </div>
         </div>
