--- a/zht.html
+++ b/zht.html
@@ -41,22 +41,18 @@
             </li>
             <li class="breadcrumb-item"><a href="ug.html">ئۇيغۇرچە</a></li>
             <li class="breadcrumb-item"><a href="tai.html">Tai</a></li>
-            <li class="breadcrumb-item"><a href="ko.html">조선어</a></li>
             <li class="breadcrumb-item">
               <a href="es.html"><i class="moji moji-es"></i>Español</a>
             </li>
             <li class="breadcrumb-item"><a href="cat.html">Català</a></li>
             <li class="breadcrumb-item">
-              <a href="ar.html"><i class="moji moji-ar"></i>العربية</a>
+              <a href="ja.html">日本語</a>
             </li>
             <li class="breadcrumb-item">
               <a href="eo.html"><i class="moji moji-eo"></i>Esperanto</a>
             </li>
             <li class="breadcrumb-item">
               <a href="lat.html"><i class="moji moji-lat"></i>Lingua Latina</a>
-            </li>
-            <li class="breadcrumb-item">
-              <a href="ja.html">日本語</a>
             </li>
           </ol>
         </nav>
@@ -78,6 +74,9 @@
               >蘇州話字典</a
             >
             <a href="https://mtf.wiki" class="list-group-item">MtF Wiki</a>
+            <a href="https://mirrors.nya.fish" class="list-group-item"
+              >mirrors.nya.fish (僅 IPv6)</a
+            >
             <a href="amigos.html" class="list-group-item">友情連結</a>
           </ul>
         </div>
@@ -97,11 +96,11 @@
                 border: 1px solid #ddd;
               "
             />
-            <span
+            <!--span
               class="badge rounded-pill bg-secondary border-3"
               style="position: absolute; left: 105px; top: -25px"
               >😔憂鬱中</span
-            >
+            -->
             <div class="card-body">
               <h2 class="card-title" style="margin-left: 130px">山前</h2>
               <table>
@@ -149,20 +148,23 @@
                 跨兒驕傲。 <a href="https://mtf.wiki/">MtF-Wiki</a>維護人員。
               </p>
               <p>
-                <a href="https://zh.wikipedia.org/wiki/吳語">吳語</a>母語者。
+                <a href="https://zh.wikipedia.org/wiki/吳語">吳語</a>母語者
                 <a href="https://nguphing.saeziae.net">吳語輸入法</a
-                >絕讚開發中。
+                >絕讚維護中。 歡迎查詢<a href="https://nguphing.saeziae.net"
+                  >蘇州話字典</a
+                >
               </p>
               <p>JK格裙那可太喜歡了 🍱喫貨</p>
               <p>👩🏻‍🎓 現在在大學攻讀西班牙語。</p>
               <p>📷 攝影。音遊，maimai陷入中，SDVX練習中</p>
               <p>✈️ 想要周遊世界的旅行者，去過好多國家了。</p>
-              <p>👀 喜歡語言學、NLP、煉丹之類亂七八糟的東西。</p>
-              <p>⌨️ <i class="moji moji-python"></i>Python 一把梭</p>
+              <p>👀 喜歡語言學、NLP、<del>煉丹</del>之類亂七八糟的東西。</p>
+              <p>⌨️ Python, Go, 想要學會 C++</p>
               <p>
-                <del><i class="moji moji-php"></i>PHP 是世界上最好的語言！</del>
+                <del>PHP 是世界上最好的語言！</del>
               </p>
-              <p><i class="moji moji-archlinux"></i>ArchLinux 用戶。</p>
+              <p>海思鯤鵬、飛騰、兆芯使用中...想玩 RISC-V，想要 ARM 筆電</p>
+              <p><i class="moji moji-archlinux"></i>ArchLinux 主力中</p>
             </div>
           </div>
         </div>
