--- a/es.html
+++ b/es.html
@@ -33,7 +33,6 @@
             </li>
             <li class="breadcrumb-item"><a href="ug.html">ئۇيغۇرچە</a></li>
             <li class="breadcrumb-item"><a href="tai.html">Tai</a></li>
-            <li class="breadcrumb-item"><a href="ko.html">조선어</a></li>
             <li class="breadcrumb-item active">
               <i class="moji moji-es"></i>Español
             </li>
@@ -41,16 +40,13 @@
               <a href="cat.html">Català</a>
             </li>
             <li class="breadcrumb-item">
-              <a href="ar.html"><i class="moji moji-ar"></i>العربية</a>
+              <a href="ja.html">日本語</a>
             </li>
             <li class="breadcrumb-item">
               <a href="eo.html"><i class="moji moji-eo"></i>Esperanto</a>
             </li>
             <li class="breadcrumb-item">
               <a href="lat.html"><i class="moji moji-lat"></i>Lingua Latina</a>
-            </li>
-            <li class="breadcrumb-item">
-              <a href="ja.html">日本語</a>
             </li>
           </ol>
         </nav>
@@ -129,22 +125,15 @@
               <p>
                 Parlante nativa de
                 <a href="https://es.wikipedia.org/wiki/Chino_Wu">Lengua Wu</a>.
-                <a href="https://nguphing.saeziae.net"
-                  >Wu language input method</a
-                >
-                está ahora en desarrollo activo.
               </p>
-              <p>Me gusta falda tableada(JKs). 🍱 "Gourmet".</p>
+              <p>Me gustan colchas. Me gustan faldas. Me gustan comidas.</p>
               <p>
                 👩🏻‍🎓 Estoy estudiando español como especialidad en mi universidad.
               </p>
               <p>📷 Fotógrafa. Videojuegos de ritmo: maimai y Sound Voltex.</p>
               <p>✈️ Me encanta viajar. He viajado a varios continentes.</p>
               <p>👀 Me interesan lingüística, NLP, y otras cosas.</p>
-              <p>
-                ⌨️ <i class="moji moji-python"></i>Python
-                <i class="moji moji-php"></i>PHP
-              </p>
+              <p>⌨️ Python, Go, PHP. Espero entender C++</p>
               <p>Usuaria de <i class="moji moji-archlinux"></i>ArchLinux.</p>
             </div>
           </div>
