--- a/ug-uly.html
+++ b/ug-uly.html
@@ -36,22 +36,18 @@
             </li>
             <li class="breadcrumb-item active">Uyghurche</li>
             <li class="breadcrumb-item"><a href="tai.html">Tai</a></li>
-            <li class="breadcrumb-item"><a href="ko.html">조선어</a></li>
             <li class="breadcrumb-item">
               <a href="es.html"><i class="moji moji-es"></i>Español</a>
             </li>
             <li class="breadcrumb-item"><a href="cat.html">Català</a></li>
             <li class="breadcrumb-item">
-              <a href="ar.html"><i class="moji moji-ar"></i>العربية</a>
+              <a href="ja.html">日本語</a>
             </li>
             <li class="breadcrumb-item">
               <a href="eo.html"><i class="moji moji-eo"></i>Esperanto</a>
             </li>
             <li class="breadcrumb-item">
               <a href="lat.html"><i class="moji moji-lat"></i>Lingua Latina</a>
-            </li>
-            <li class="breadcrumb-item">
-              <a href="ja.html">日本語</a>
             </li>
           </ol>
         </nav>
@@ -147,11 +143,7 @@
                 qilgen.
               </p>
               <p>👀 Men tilshunasliqqa qiziqimen.</p>
-              <p>
-                ⌨️
-                <i class="moji moji-python"></i>Python
-                <i class="moji moji-php"></i>PHP
-              </p>
+              <p>⌨️ Python, Go, PHP</p>
               <p><i class="moji moji-archlinux"></i>ArchLinux</p>
               <p>🇨🇳 Milletler ittipaqliqi.</p>
             </div>
