--- a/zh.html
+++ b/zh.html
@@ -37,22 +37,18 @@
             </li>
             <li class="breadcrumb-item"><a href="ug.html">ئۇيغۇرچە</a></li>
             <li class="breadcrumb-item"><a href="tai.html">Tai</a></li>
-            <li class="breadcrumb-item"><a href="ko.html">조선어</a></li>
             <li class="breadcrumb-item">
               <a href="es.html"><i class="moji moji-es"></i>Español</a>
             </li>
             <li class="breadcrumb-item"><a href="cat.html">Català</a></li>
             <li class="breadcrumb-item">
-              <a href="ar.html"><i class="moji moji-ar"></i>العربية</a>
+              <a href="ja.html">日本語</a>
             </li>
             <li class="breadcrumb-item">
               <a href="eo.html"><i class="moji moji-eo"></i>Esperanto</a>
             </li>
             <li class="breadcrumb-item">
               <a href="lat.html"><i class="moji moji-lat"></i>Lingua Latina</a>
-            </li>
-            <li class="breadcrumb-item">
-              <a href="ja.html">日本語</a>
             </li>
           </ol>
         </nav>
@@ -75,6 +71,9 @@
                 >苏州话字典</a
               >
               <a href="https://mtf.wiki" class="list-group-item">MtF Wiki</a>
+              <a href="https://mirrors.nya.fish" class="list-group-item"
+                >mirrors.nya.fish (IPv6 单栈)</a
+              >
               <a href="amigos.html" class="list-group-item">友情链接</a>
             </ul>
           </div>
@@ -95,11 +94,11 @@
                 border: 1px solid #ddd;
               "
             />
-            <span
+            <!--span
               class="badge rounded-pill bg-secondary border-3"
               style="position: absolute; left: 105px; top: -25px"
               >😔抑郁中</span
-            >
+            -->
             <div class="card-body">
               <h2 class="card-title" style="margin-left: 130px">山前</h2>
               <table>
@@ -147,20 +146,21 @@
                 跨儿骄傲。 <a href="https://mtf.wiki/">MtF-Wiki</a>维护人员。
               </p>
               <p>
-                <a href="https://zh.wikipedia.org/wiki/吴语">吴语</a>母语者。
-                <a href="https://nguphing.saeziae.net">吴语输入法</a
-                >绝赞开发中。
+                <a href="https://zh.wikipedia.org/wiki/吴语">吴语</a>母语者
+                <a href="https://nguphing.saeziae.net">吴语输入法</a>绝赞维护中
+                欢迎查询<a href="https://nguphing.saeziae.net">苏州话字典</a>
               </p>
-              <p>JK格裙那可太喜欢了 🍱吃货</p>
-              <p>👩🏻‍🎓 现在在大学攻读西班牙语。</p>
-              <p>📷 摄影。音游，maimai陷入中，SDVX练习中。</p>
+              <p>喜欢被子 喜欢小裙子 喜欢吃</p>
+              <p>👩🏻‍🎓 现在在攻读西班牙语，二学位是CS</p>
+              <p>📷 玩摄影 玩音游（maimai SDVX 选手）</p>
               <p>✈️ 想要周游世界的旅行者，去过好多国家了。</p>
-              <p>👀 喜欢语言学、NLP、炼丹之类乱七八糟的东西。</p>
-              <p>⌨️ <i class="moji moji-python"></i>Python 一把梭</p>
+              <p>👀 喜欢语言学、NLP、<del>炼丹</del>之类乱七八糟的东西。</p>
+              <p>⌨️ Python, Go, 想要学会 C++</p>
               <p>
-                <del><i class="moji moji-php"></i>PHP 是世界上最好的语言！</del>
+                <del>PHP 是世界上最好的语言！</del>
               </p>
-              <p><i class="moji moji-archlinux"></i>ArchLinux 用户。</p>
+              <p>海思鲲鹏、飞腾、兆芯使用中...想玩 RISC-V，想要 ARM 笔电</p>
+              <p><i class="moji moji-archlinux"></i>ArchLinux 主力中</p>
             </div>
           </div>
         </div>
