--- a/zh.html
+++ b/zh.html
@@ -146,9 +146,11 @@
                 跨儿骄傲。 <a href="https://mtf.wiki/">MtF-Wiki</a>维护人员。
               </p>
               <p>
-                <a href="https://zh.wikipedia.org/wiki/吴语">吴语</a>母语者
-                <a href="https://nguphing.saeziae.net">吴语输入法</a>绝赞维护中
-                欢迎查询<a href="https://nguphing.saeziae.net">苏州话字典</a>
+                <a href="https://zh.wikipedia.org/wiki/吴语">吴语</a>母语者。
+                <a href="https://nguphing.saeziae.net">吴语输入法</a
+                >绝赞维护中，欢迎查询<a href="https://nguphing.saeziae.net"
+                  >苏州话字典</a
+                >
               </p>
               <p>喜欢被子 喜欢小裙子 喜欢吃</p>
               <p>👩🏻‍🎓 现在在攻读西班牙语，二学位是CS</p>
