--- a/zht.html
+++ b/zht.html
@@ -148,9 +148,9 @@
                 跨兒驕傲。 <a href="https://mtf.wiki/">MtF-Wiki</a>維護人員。
               </p>
               <p>
-                <a href="https://zh.wikipedia.org/wiki/吳語">吳語</a>母語者
+                <a href="https://zh.wikipedia.org/wiki/吳語">吳語</a>母語者。
                 <a href="https://nguphing.saeziae.net">吳語輸入法</a
-                >絕讚維護中。 歡迎查詢<a href="https://nguphing.saeziae.net"
+                >絕讚維護中，歡迎查詢<a href="https://nguphing.saeziae.net"
                   >蘇州話字典</a
                 >
               </p>
