sync zh-hant with zh-hans

--- a/zht.html
+++ b/zht.html
@@ -154,8 +154,8 @@
                   >蘇州話字典</a
                 >
               </p>
-              <p>JK格裙那可太喜歡了 🍱喫貨</p>
-              <p>👩🏻‍🎓 現在在大學攻讀西班牙語。</p>
+              <p>喜歡被子 喜歡小裙子 喜歡吃</p>
+              <p>👩🏻‍🎓 現在在攻讀西班牙語，二學位是CS</p>
               <p>📷 攝影。音遊，maimai陷入中，SDVX練習中</p>
               <p>✈️ 想要周遊世界的旅行者，去過好多國家了。</p>
               <p>👀 喜歡語言學、NLP、<del>煉丹</del>之類亂七八糟的東西。</p>
