--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
                 <del>PHP is the best language in the world!</del>
               </p>
               <p>
-                Using HiSilicon Kunpeng, Phytium, Zhaoxin CPUs. Wanting RISC-V,
-                wanting an ARM laptop.
+                Using HiSilicon Kunpeng, Phytium, Zhaoxin CPUs. Playing with
+                RISC-V. wanting an ARM laptop.
               </p>
               <p><i class="moji moji-archlinux"></i>ArchLinux user.</p>
             </div>
