--- a/zh.html
+++ b/zh.html
@@ -161,7 +161,7 @@
               <p>
                 <del>PHP 是世界上最好的语言！</del>
               </p>
-              <p>海思鲲鹏、飞腾、兆芯使用中...想玩 RISC-V，想要 ARM 笔电</p>
+              <p>海思鲲鹏、飞腾、兆芯使用中... 在玩 RISC-V. 想要 ARM 笔电</p>
               <p><i class="moji moji-archlinux"></i>ArchLinux 主力中</p>
             </div>
           </div>
