--- a/zht.html
+++ b/zht.html
@@ -163,7 +163,7 @@
               <p>
                 <del>PHP 是世界上最好的語言！</del>
               </p>
-              <p>海思鯤鵬、飛騰、兆芯使用中...想玩 RISC-V，想要 ARM 筆電</p>
+              <p>海思鯤鵬、飛騰、兆芯使用中... 在玩 RISC-V. 想要 ARM 筆電</p>
               <p><i class="moji moji-archlinux"></i>ArchLinux 主力中</p>
             </div>
           </div>
